# EKF

./: EKFEngine.m  MEKF.m  Model.m  SimplifiedModel.m  Utils.m  comparator.m  empty_data.csv  init.m  main.m  sensors_noises.m  state_of_the_cake.txt
data/: data_input_1.m  data_input_2.m  data_input_LA3.m  out_8.csv  raw_in_2.csv  raw_in_4.csv  rolling_in_4.csv  static.csv  static_out.csv  static_out_shai.csv  static_raw.csv  static_raw_shai.csv
data/records/: LA3.csv  half_in_10_2.csv  half_in_11_2.csv  out.csv  out_8_1.csv  out_8_1_b.csv  out_half_11_2_b.csv  out_half_11_2_b_fv.csv  out_half_11_2_c.csv  raw_in.csv  raw_in_8.csv
engines/: BaseKFEngine.m  EKFEngine.m  UKFEngine.m
models/: BaseEKFModel.m  BaseModel.m  BaseUKFModel.m  OptiTrackModelEKF.m  SimplifiedModel.m  TranslationRotationModel.m  TranslationRotationModelEKF.m  TranslationRotationModelUKF.m  TranslationRotationModelV2.m
plotting/: HelperBox.m  HelperOrientationViewer.m  HelperPoseViewer.m  HelperPositionViewer.m  PoseViewer.m  plotting.m
shai/: CMakeLists.txt
shai/includes/: BaseDataCollector.hpp  BaseModel.hpp  EKFEngine.hpp  MEKF.hpp  SensorParameters.hpp  TranslationRotationModel.hpp  TranslationRotationModelV2.hpp  Utils.hpp
shai/includes/data/: EigenDebugger.hpp  SimulationDataIO.hpp
shai/includes/models/: BaseModel.hpp  SensorParameters.hpp  TranslationRotationModel.hpp
shai/src/: MEKF.cpp  TranslationRotationModel.cpp  TranslationRotationModelV2.cpp  main.cpp
shai/src/data/: SimulationDataIO.cpp
shai/src/models/: TranslationRotationModel.cpp
(+5 files in other folders)
